[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/cavestuff/basement.png" type="Texture" id=4]
[ext_resource path="res://sprites/cavestuff/note.png" type="Texture" id=5]
[ext_resource path="res://Levels/0.0 Cave/Basement.gd" type="Script" id=6]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://hitnhurtboxes/SeenBox.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.511, 112.613 )

[sub_resource type="Animation" id=2]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 888.533, -89.4823 ), Vector2( 918.166, 462.421 ), Vector2( 892.237, 443.9 ), Vector2( 873.717, 466.125 ), Vector2( 855.197, 466.125 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 145.218, 73.0633 )

[sub_resource type="CircleShape2D" id=3]
radius = 62.2489

[node name="Basement" type="Node2D"]
script = ExtResource( 6 )

[node name="basement" type="Sprite" parent="."]
position = Vector2( 922.6, 475.312 )
texture = ExtResource( 4 )

[node name="note" type="Sprite" parent="."]
position = Vector2( 869.178, 649.86 )
texture = ExtResource( 5 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 855.197, 466.125 )

[node name="PillowSpawnPoint" parent="." instance=ExtResource( 3 )]
position = Vector2( 898.359, 468.034 )

[node name="DoorSpawnPoint" parent="." instance=ExtResource( 3 )]
position = Vector2( 1044.36, 587.732 )

[node name="BG" parent="." instance=ExtResource( 2 )]
margin_left = -32.7102
margin_top = -195.376
margin_right = 2789.29
margin_bottom = 1909.63

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 958.864, 392.269, 834.765, 398.917, 814.821, 432.158, 737.259, 480.911, 739.475, 525.232, 699.586, 565.121, 695.154, 664.843, 781.58, 760.133, 892.383, 791.158, 996.537, 768.997, 1029.78, 682.571, 1027.56, 660.411, 1131.72, 576.201, 1286.84, 698.084, 657.481, 1028.28, 469.117, 354.596, 790.444, 126.343, 1193.77, 208.337, 1098.48, 496.423, 1031.99, 549.609, 1027.56, 505.287, 1045.29, 474.263 )

[node name="TransitionZone" parent="." instance=ExtResource( 7 )]
position = Vector2( 14.9644, 0 )

[node name="CollisionShape2D" parent="TransitionZone" index="0"]
position = Vector2( 1114.83, 480.726 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 2 )

[node name="Pillows" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="Pillows" index="0"]
position = Vector2( 899.243, 491.125 )
shape = SubResource( 4 )

[node name="Letter" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="Letter" index="0"]
position = Vector2( 869.844, 657.139 )
shape = SubResource( 3 )
[connection signal="transition_triggered" from="TransitionZone" to="." method="_on_TransitionZone_transition_triggered"]
[connection signal="seen" from="Pillows" to="." method="_on_Pillows_seen"]
[connection signal="seen" from="Letter" to="." method="_on_Letter_seen"]

[editable path="TransitionZone"]

[editable path="Pillows"]

[editable path="Letter"]
